# DBDI

./: .env.example  .gitignore  config.py  download_harmful_benchmarks.py  environment.yml  harmful_benchmark_eval.py  harmful_vector.py  pyproject.toml  readme.md  refusevector.py  requirements.txt  start_experiment_ezfomat.py  start_experiment_stfomat.py  ui.py  utils.py
data/: harmbench-half.json  harmbench_validation.json
extracted_harm_vector/llama-2/advbench/: all_layer_vectors.pt
extracted_harm_vector/llama-2/harmbench/: all_layer_vectors.pt
extracted_harm_vector/llama-2/strongreject/: all_layer_vectors.pt
extracted_refuse_vector/llama-2/: all_layer_vectors.pt  best_5_layer_vectors.pt  extraction_metadata.json
models/: download_models.sh
parameter/: default_3x3.json  llama-2.json
