[project]
name = "dbdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.7.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.4",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "black[jupyter]>=26.5.1",
    "brotli==1.1.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "datasets==3.6.0",
    "dill==0.3.8",
    "distro==1.9.0",
    "dotenv>=0.9.9",
    "einops==0.8.1",
    "fastapi==0.115.12",
    "ffmpy==0.6.1",
    "filelock==3.18.0",
    "flash-attn",
    "fonttools==4.58.4",
    "frozenlist==1.6.0",
    "fschat==0.2.36",
    "fsspec==2025.3.0",
    "google-api-core==2.25.1",
    "google-api-python-client==2.175.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.3",
    "google-cloud-translate==3.21.1",
    "googleapis-common-protos==1.70.0",
    "gradio==5.38.2",
    "gradio-client==1.11.0",
    "groovy==0.1.2",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.73.1",
    "grpcio-status==1.73.1",
    "h11==0.16.0",
    "hf-xet>=1.5.1",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "huggingface-hub>=0.36.2",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "langchain-openai>=0.3.29",
    "latex2mathml==3.78.0",
    "litellm==1.74.0.post1",
    "markdown-it-py==3.0.0",
    "markdown2==2.5.3",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "nh3==0.2.21",
    "nltk==3.9.1",
    "numpy==2.2.6",
    "openai==1.88.0",
    "orjson==3.11.1",
    "packaging==25.0",
    "pandas==2.2.3",
    "peft==0.16.0",
    "pillow==11.2.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pyaml==25.5.0",
    "pyarrow==20.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "rsa==4.9.1",
    "ruff==0.12.5",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scikit-optimize==0.10.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "semantic-version==2.10.0",
    "sentencepiece==0.2.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "svgwrite==1.4.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers>=0.22.2",
    "tomlkit==0.13.3",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.57.6",
    "triton==3.3.0",
    "typer==0.16.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "wavedrom==2.0.3.post3",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zipp==3.23.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
flash-attn = { url = "https://fastgit.cc/https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.0.post2/flash_attn-2.8.0.post2+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "aliyun-mirrors"
url = "https://mirrors.aliyun.com/pypi/web/simple"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu118"
format = "flat"
explicit = true

[tool.black]
target-version = ["py312"]
skip-string-normalization = false
exclude = '''
.git/
|.venv/
'''
